Fixed styles broken in IE 11.

--- a/crud-editor/src/components/Guards/Guards.less
+++ b/crud-editor/src/components/Guards/Guards.less
@@ -19,3 +19,19 @@
   height: 400px;
   border: @editor-border;
 }
+
+.guards-table {
+  vertical-align: top;
+  table-layout: fixed;
+}
+
+.guards-table th {
+  vertical-align: middle !important
+}
+
+.guards-table .output-heading {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  border-bottom-width: 1px;
+}
